--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,21 @@
 <resources>
+    <!-- Activity/Fragment names -->
     <string name="app_name">Robinhood</string>
+    <string name="title_activity_main">Robinhood</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_account_overview">Account Overview</string>
+    <string name="title_portfolio">Portfolio</string>
+    <string name="title_settings">Account Settings</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <!-- Login Activity -->
+    <string name="username_hint">username</string>
+    <string name="password_hint">password</string>
+    <string name="button_login">log in</string>
+    <string name="authentication_failure">Failed to authenticate user</string>
+
 </resources>
